         See https://forum.kodi.tv/showthread.php?tid=329315&pid=2711937#pid2711937
         and https://forum.kodi.tv/showthread.php?tid=307394&pid=2531524

WIP      Improve the Custom Filters (add more filtering options). Have

WIP      Import the number of supported PDF filters.

WIP      When displaying manuals use cached extracted images if they exist.

WIP      Support for CBZ/CBR manuals. Wait until this is implemented in AEL and then port it
         from AEL into AML?


[B]Advanced Emulator Launcher | version 0.9.6 | xx May 2018[/B]

WORKING  Option in settings to update all MAME and SL Favourite ROMs. Useful for plugin upgrades.

FEATURE  Asset hashed database. This will speed up launching MAME machines. Note that the asset
         DB must be opened for the Most Played and Recently Played DBs.

FEATURE  Prettify the "Display rotation" filter (use Horizontal/Vertical instead of numbers).

FEATURE  Include number of buttons in controls and some other control information.

FEATURE  Add the Samples of each machine to the ROM database.

FEATURE  Audit the ROM samples inside ZIP files.

FEATURE  Implement "Most played MAME machines"

FEATURE  Implement "Recently played MAME machines"

WIP      Implement "Most played SL ROMs"

WIP      Implement "Recently played SL ROMs"


[B]Advanced Emulator Launcher | version 0.9.5 | 11 May 2018[/B]

FEATURE  Option to disable the ROM and asset caches.

FEATURE  CRC32 hash collision detector for MAME and SL ROMs.

FEATURE  MAME ROM and asset cache disable by default. They may be enabled by user that want to
         increase the loading speed. This will be very useful for develpment because
         cache rebuilding takes a long time.

FEATURE  Check if AML configuration is OK or not, and warn the user about warnings/errors.

FEATURE  Improved PDF manual rendering. Use the library pdfrw for image extraction.

FEATURE  Clean ROM cache before rebuilding cache.

FEATURE  Clean asset cache before rebuilding cache.
