@@ -13,13 +13,13 @@ WIP      Import the number of supported PDF filters.
 
 WIP      When displaying manuals use cached extracted images if they exist.
 
+WIP      Progress bar when extracting PDF pages.
+
 WIP      Support for CBZ/CBR manuals. Wait until this is implemented in AEL and then port it
          from AEL into AML?
 
 
 [B]Advanced Emulator Launcher | version 0.9.6 | xx May 2018[/B]
-
-WORKING  Option in settings to update all MAME and SL Favourite ROMs. Useful for plugin upgrades.
 
 FEATURE  Asset hashed database. This will speed up launching MAME machines. Note that the asset
          DB must be opened for the Most Played and Recently Played DBs.
@@ -35,6 +35,8 @@ FEATURE  Audit the ROM samples inside ZIP files.
 FEATURE  Implement "Most played MAME machines"
 
 FEATURE  Implement "Recently played MAME machines"
+
+WIP      Option in settings to update all MAME and SL Favourite ROMs. Useful for plugin upgrades.
 
 WIP      Implement "Most played SL ROMs"
 
